# ion-binary-rs

./: .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: coverage.yml  rust.yml
benches/: my_benchmark.rs  parser_benchmark.rs
src/: binary_encoder.rs  binary_parser.rs  binary_parser_types.rs  error_type.rs  ion_encoder.rs  ion_hash.rs  ion_hash_encoder.rs  ion_parser.rs  ion_parser_types.rs  ion_type.rs  ion_value_impl.rs  length_type.rs  lib.rs  symbol_constants.rs  symbol_table.rs
src/tests/: binary_encoder.rs  binary_parser.rs  binary_tests.rs  ion_encoder.rs  ion_hash.rs  ion_parser.rs  ion_parser_good.rs  ion_parser_good_decimal.rs  ion_parser_good_equivs.rs  ion_parser_good_equivs_int.rs  ion_parser_good_int.rs  ion_parser_good_nop_padding.rs  ion_parser_good_null.rs  ion_parser_good_struct.rs  ion_parser_good_timestamp.rs  ion_parser_good_typecodes.rs  mod.rs  test_utils.rs
src/tests/bad_tests/: ion_parser_bad_annotation.rs  ion_parser_bad_others.rs  ion_parser_bad_serde_value.rs  ion_parser_bad_timestamp.rs  ion_parser_bad_typecodes.rs  mod.rs
src/tests/good_tests/: ion_parser_good.rs  ion_parser_good_decimal.rs  ion_parser_good_equivs_int.rs  ion_parser_good_int.rs  ion_parser_good_nop_padding.rs  ion_parser_good_serde_value.rs  ion_parser_good_struct.rs  ion_parser_good_typecodes.rs  mod.rs
src/tests/ion_hash/: annotations.rs  blob.rs  bool.rs  clob.rs  decimal.rs  float.rs  general.rs  integer.rs  list.rs  mod.rs  null.rs  sexp.rs  string.rs  struct.rs  symbol.rs  timestamp.rs
src/tests/ion_hash/reference_hash_impl/: ion_hash_general_2.ts
src/tests/js_hash/: ion_hash_complex.ts
tests/: binary_parser.rs  ion_parser.rs
