[package]
name = "ion-binary-rs"
version = "0.7.1"
authors = ["Couragium Solutions <info@couragium.com>"]
edition = "2018"
description="Pure Rust parser, encoder and hasher for Amazon's Ion binary format."
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["ion", "binary", "amazon", "encode", "parse"]
categories = ["network-programming"]
documentation = "https://docs.rs/ion-binary-rs"
homepage = "https://crates.io/crates/ion-binary-rs"
repository = "https://github.com/Couragium/ion-binary-rs"


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.15"
log = "0.4.11"
env_logger = "0.7.1"
bigdecimal = "0.2.0"
num-bigint = "0.3.0"
num-traits = "0.2.12"
digest = "0.9.0"
sha2 = "0.9.1"
thiserror = "1.0.22"

[dev-dependencies]
bytes = "0.5.6"
