[package]
name = "ion-binary-rs"
version = "0.8.5"
authors = ["Couragium Solutions <info@couragium.com>"]
edition = "2018"
description="Pure Rust parser, encoder and hasher for Amazon's Ion binary format."
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["ion", "binary", "amazon", "encode", "parse"]
categories = ["network-programming"]
documentation = "https://docs.rs/ion-binary-rs"
homepage = "https://crates.io/crates/ion-binary-rs"
repository = "https://github.com/Couragium/ion-binary-rs"


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
bigdecimal = "0.2.0"
num-bigint = "0.4.0"
num-bigint-32 = { package = "num-bigint", version = "0.3.2" }
num-traits = "0.2.14"
digest = "0.9.0"
sha2 = "0.9.5"
thiserror = "1.0.26"
serde_json = "1.0.64"
