[package]
name = "ion-binary-rs"
version = "0.8.11"
authors = ["Couragium Solutions <info@couragium.com>"]
edition = "2021"
description="Pure Rust parser, encoder and hasher for Amazon's Ion binary format."
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["ion", "binary", "amazon", "encode", "parse"]
categories = ["network-programming"]
documentation = "https://docs.rs/ion-binary-rs"
homepage = "https://crates.io/crates/ion-binary-rs"
repository = "https://github.com/Couragium/ion-binary-rs"


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4"
log = "0.4"
bigdecimal = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
digest = "0.10"
sha2 = "0.10"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
bson = "2.7.0"

[[bench]]
name = "my_benchmark"
harness = false
